Fix invisible input-group-text in some dark themes

--- a/styl/theme-touchups.styl
+++ b/styl/theme-touchups.styl
@@ -3,3 +3,6 @@
 .theme-lux     .navbar-brand .icon:before { vertical-align: text-top }
 .theme-cosmo   .navbar-brand .icon:before { vertical-align: text-top }
 .theme-journal .navbar-brand .icon:before { vertical-align: baseline }
+
+.theme-cyborg, .theme-darkly
+  .input-group-text { color: #fff }
